--- a/.github/workflows/ci-primer-wf.yml
+++ b/.github/workflows/ci-primer-wf.yml
@@ -1,6 +1,11 @@
 name: Comandos de shell
 
-on: push
+# on: push
+
+on:
+  schedule: 
+    - cron:  '0,5,10,15,20,25,30,35,40,45,50,55 * * * *'
+
 
 jobs:
   build_and_release:
@@ -33,10 +38,4 @@ jobs:
               Get-Location
               Get-ChildItem
        shell: powershell
-
-     - name: bash
-       run: | 
-              pwd
-              ls -la
-       shell: bash
 
